fix the layout issues

--- a/src/_tailwind/style.css
+++ b/src/_tailwind/style.css
@@ -3,10 +3,9 @@
 @layer utilities {
 	.small-caps { font-variant: small-caps; }
 }
+
 @layer base {
 	main {
 		@apply mx-4;
-		@apply md:container;
-		@apply md:mx-auto;
 	}
 }
